[package]
name = "rexmit-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexmit = { path = "../rexmit" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }